--- a/config/database.yml
+++ b/config/database.yml
@@ -1,31 +1,20 @@
-#encoding: utf-8
-# SQLite version 3.x
-#   gem install sqlite3
-#
-#   Ensure the SQLite 3 gem is defined in your Gemfile
-#   gem 'sqlite3'
+base: &base
+  adapter: mysql2
+  encoding: utf8
+  reconnect: true
+  wait_timeout: 600
+  pool: 25
+  username: root
+  password: kenrome001
+  host: 127.0.0.1
+  port: 3308
+  database: ymzg
+
 development:
-    adapter: postgresql
-    encoding: utf-8
-    database: ymzg_development
-    pool: 20
-    host: localhost
+  <<: *base
 
-
-# Warning: The database defined as "test" will be erased and
-# re-generated from your development database when you run "rake".
-# Do not set this db to the same as development or production.
 test:
-      adapter: postgresql
-      encoding: utf-8
-      database: ymzg_test
-      pool: 20
-      host: localhost
-
+  <<: *base
 
 production:
-      adapter: postgresql
-      encoding: utf-8
-      database: ymzg_production
-      pool: 20
-      host: localhost
+  <<: *base
